[package]
name = "arkworks-gadgets"
version = "0.1.0"
edition = "2021"
description = "Cryptographic gadgets for use with the Arkworks zero-knowledge proof library"
authors = ["Contributors"]
license = "MIT OR Apache-2.0"

# The library will automatically use src/lib.rs
[lib]
name = "arkworks_gadgets"

# The binary will use src/main.rs
[[bin]]
name = "arkworks-gadgets"

[[example]]
name = "blake3_example"
path = "examples/blake3_example.rs"

[[example]]
name = "aes_example"
path = "examples/aes_example.rs"

[dependencies]
openssl = "0.10.55"
rand = "0.8.5"

# Arkworks family;
ark-bn254 = "^0.5.0"
ark-ff = "^0.5.0"
ark-r1cs-std = "^0.5.0"
ark-relations =  "^0.5.0"
ark-bls12-381 = "^0.5.0"
ark-crypto-primitives = { version = "^0.5.0", features = ["sponge", "crh", "r1cs"] }
ark-grumpkin="^0.5.0"
blake3 = "1.5.5"
